compiler-core/src/parse/snapshots/gleam_core__parse__tests__const_record_update_with_module.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nconst local_const = other.Record(..other.base, field: value)\n"
---
Parsed {
    module: Module {
        name: "",
        documentation: [],
        type_info: (),
        definitions: [
            TargetedDefinition {
                definition: ModuleConstant(
                    ModuleConstant {
                        documentation: None,
                        location: SrcSpan {
                            start: 1,
                            end: 18,
                        },
                        publicity: Private,
                        name: "local_const",
                        name_location: SrcSpan {
                            start: 7,
                            end: 18,
                        },
                        annotation: None,
                        value: RecordUpdate {
                            location: SrcSpan {
                                start: 21,
                                end: 61,
                            },
                            constructor_location: SrcSpan {
                                start: 21,
                                end: 33,
                            },
                            module: Some(
                                (
                                    "other",
                                    SrcSpan {
                                        start: 21,
                                        end: 26,
                                    },
                                ),
                            ),
                            name: "Record",
                            record: RecordBeingUpdated {
                                base: Var {
                                    location: SrcSpan {
                                        start: 36,
                                        end: 46,
                                    },
                                    module: Some(
                                        (
                                            "other",
                                            SrcSpan {
                                                start: 36,
                                                end: 41,
                                            },
                                        ),
                                    ),
                                    name: "base",
                                    constructor: None,
                                    type_: (),
                                },
                                location: SrcSpan {
                                    start: 36,
                                    end: 46,
                                },
                            },
                            arguments: [
                                RecordUpdateArg {
                                    label: "field",
                                    location: SrcSpan {
                                        start: 48,
                                        end: 60,
                                    },
                                    value: Var {
                                        location: SrcSpan {
                                            start: 55,
                                            end: 60,
                                        },
                                        module: None,
                                        name: "value",
                                        constructor: None,
                                        type_: (),
                                    },
                                },
                            ],
                            tag: (),
                            type_: (),
                            field_map: Unknown,
                        },
                        type_: (),
                        deprecation: NotDeprecated,
                        implementations: Implementations {
                            gleam: true,
                            can_run_on_erlang: true,
                            can_run_on_javascript: true,
                            uses_erlang_externals: false,
                            uses_javascript_externals: false,
                        },
                    },
                ),
                target: None,
            },
        ],
        names: Names {
            local_types: {},
            imported_modules: {},
            type_variables: {},
            local_value_constructors: {},
            alias_types: {},
            reexport_aliases: {},
        },
        unused_definition_positions: {},
    },
    extra: ModuleExtra {
        module_comments: [],
        doc_comments: [],
        comments: [],
        empty_lines: [],
        new_lines: [
            0,
            61,
        ],
        trailing_commas: [],
    },
}
